# high-availability-database

./: CMakeLists.txt  main.cpp
Connections/: client.cpp  client.h  server.cpp  server.h
DataStructures/: BtreeTest.h  DoubleNode.h  DoublyLinkedList.h  Queue.h  QueueNode.h  Stack.h  Tuple.h
MasterEngine/: Master.cpp  Master.h
Parsers/: JSONManager.cpp  JSONManager.h  XMLManager.cpp  XMLManager.h
